#pagination visibile fix

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,7 +5,7 @@
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(4, 1fr);
-    height: calc(100vh - 150px);
+    height: calc(100vh - 185px);
     overflow: scroll;
     padding: 1em;
   }
